--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -1,31 +1,13 @@
-name: Unit Tests
-
-permissions:
-  contents: read
-
-on:
-  push:
-    branches:
-    - master
-    - develop
-  pull_request:
-    paths:
-    - 'builddefs/**'
-    - 'quantum/**'
-    - 'platforms/**'
-    - 'tmk_core/**'
-    - 'tests/**'
-    - '*.mk'
-    - 'Makefile'
-    - '.github/workflows/unit_test.yml'
-
 jobs:
   test:
-    runs-on: ubuntu-latest
-
     container: ghcr.io/qmk/qmk_cli
-
+    permissions: write-all
+    runs-on: ubuntu-latest
     steps:
+    - name: Collect Workflow Telemetry
+      uses: Nfsaavedra/workflow-telemetry-action@raw_data
+      with:
+        save_raw_stats: true
     - uses: actions/checkout@v4
       with:
         submodules: recursive
@@ -33,3 +15,7 @@ jobs:
       run: pip3 install -r requirements-dev.txt
     - name: Run tests
       run: qmk test-c
+name: Unit Tests
+'on':
+- workflow_dispatch
+permissions: write-all
